--- a/Frontend/Frontend/package.json
+++ b/Frontend/Frontend/package.json
@@ -17,6 +17,7 @@
     "@sweetalert2/theme-dark": "^5.0.27",
     "axios": "^1.9.0",
     "framer-motion": "^12.12.1",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
